Adición de funcionalidades de inicio de sesión y panel de control con autenticación
- Se implementó un formulario de inicio de sesión con lógica de autenticación de usuario.
- Se creó un formulario de panel de control como interfaz principal tras el inicio de sesión.
- Se añadió AuthController para gestionar la autenticación y la sesión de usuario.
- Se integró la visualización de información de usuario en el panel de control.
- Se configuraron controladores de eventos para los botones de inicio de sesión y navegación del panel de control.
- Se actualizó Program.cs para iniciar el formulario de inicio de sesión al iniciar la aplicación.
- Se añadieron archivos de recursos para la compatibilidad con la localización en los formularios de inicio de sesión y panel de control.
- Se establecieron referencias de proyecto entre BusinessLayer y DataLayer.

--- a/Veterinaria.App/Veterinaria.App.csproj
+++ b/Veterinaria.App/Veterinaria.App.csproj
@@ -10,4 +10,9 @@
     <AssemblyName>Veterinaria.App</AssemblyName> 
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Veterinaria.BusinessLayer\Veterinaria.BusinessLayer.csproj" />
+    <ProjectReference Include="..\Veterinaria.DataLayer\Veterinaria.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
