Agregar modelos 'Cliente', 'DetalleVenta', 'Mascota', 'Producto', 'Venta' y 'Persona' para la gestión de datos en la base de datos; actualizar referencias de proyecto y eliminar clase innecesaria.

--- a/Veterinaria.BusinessLayer/Veterinaria.BusinessLayer.csproj
+++ b/Veterinaria.BusinessLayer/Veterinaria.BusinessLayer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Veterinaria.DataLayer\Veterinaria.DataLayer.csproj" />
+    <ProjectReference Include="..\Veterinaria.ModelLayer\Veterinaria.ModelLayer.csproj" />
   </ItemGroup>
 
 </Project>
